Mon Apr 15 15:41:56 2002  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtkcontainer.c (gtk_container_focus): include internal
	children when doing focus.
	(gtk_container_get_all_children): new static function to include
	internal children when making a list of them.

Sun Apr 14 16:56:59 2002  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtktreeprivate.h: add _gtk_tree_view_column_get_editable_cell and
	_gtk_tree_view_column_get_neighbor_sizes

	* gtk/gtktreeviewcolumn.c (struct _GtkTreeViewColumnCellInfo): add
	real_width field,
	(_gtk_tree_view_column_get_editable_cell): implement,
	(gtk_tree_view_column_cell_process_action): fill info->real_width
	(_gtk_tree_view_column_get_neighbor_sizes): implement

	* gtk/gtktreeview.c (gtk_tree_view_button_press): make the "editable
	widget" show up with the same size as the actual cell, so it doesnt
	cover the complete column if there are any other cells in that column.

2002-04-14  Abigail Brady  <morwen@evilmagic.org>

	* gtk/gtkfilesel.c: Fix typo in message.

2002-04-13  Havoc Pennington  <hp@pobox.com>

	* gdk/gdkpixbuf-drawable.c (gdk_pixbuf_get_from_drawable): create
	the target pixbuf AFTER filling in width/height, so that 
	passing in -1 for width/height will work.
	
Sat Apr 13 22:49:45 2002  Kristian Rietveld  <kris@gtk.org>

	Fixes #75510

	* gtk/gtktreeselection.c (gtk_tree_selection_get_selected): make this
	function work correctly and more sane

	* gtk/gtktreeview.c (gtk_tree_view_real_collapse_row): remove
	node->children from rbtree before emitting GtkTreeSelection::changed

Sat Apr 13 17:15:12 2002  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtkcellrenderertext.c (gtk_cell_renderer_text_init): dont set
	the mode to GTK_CELL_RENDERER_MODE_EDITABLE by default,
	(gtk_cell_renderer_text_class_init): for some reason our default for
	editable was TRUE, of course this is FALSE.
	(gtk_cell_renderer_text_set_property): update mode when editable
	has been changed.

2002-04-12  jacob berkman  <jacob@ximian.com>
