@@ -1,3 +1,11 @@
+Tue Apr 16 07:53:49 2002  Tim Janik  <timj@gtk.org>
+
+	* gtk/gtkmenu.c (gtk_menu_key_press): don't install/change accelerators
+	from locked accel groups.
+
+	* gtk/gtkwidget.c (_gtk_widget_get_accel_path): export whether the
+	accel path is from a locked accel group.
+
 Mon Apr 15 15:41:56 2002  Jonathan Blandford  <jrb@redhat.com>
 
 	* gtk/gtkcontainer.c (gtk_container_focus): include internal
